--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "nodejs",
+  "name": "node-express-web",
   "version": "1.0.0",
-  "description": "Appwrite",
-  "main": "src/main.js",
-  "author": "eooce",
-  "license": "MIT",
-  "private": false,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/main.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "latest"
+    "ejs": "^3.1.9",
+    "axios": "1.8.4",
+    "express": "^4.21.1"
   },
-  "engines": {
-    "node": ">=18"
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
